# Risk-Severity-Classification

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: evaluate_sample.py  quickstart.sh  serve_api.sh  serve_gradio.sh
src/: __init__.py  app.py
src/api/: __init__.py  router.py  schemas.py
src/cli/: __init__.py  commands.py
src/core/: __init__.py  config.py  schemas.py
src/services/: classification_service.py  extraction_service.py  guardrails_service.py  llm_services.py  ocr_service.py  retrieval_service.py
src/ui/: gradio_app.py
src/utils/: io.py  temp.py
